unpackaged/main/default/objects/Account/fields/Akhil__c.field-meta.xml
<CustomField>
    <fullName>Akhil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Akhil</label>
    <type>Checkbox</type>
</CustomField>