unpackaged/main/default/objects/Account/fields/demo_field__c.field-meta.xml
<CustomField>
    <fullName>demo_field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo field</label>
    <type>Checkbox</type>
</CustomField>