unpackaged/main/default/objects/Account/fields/multiple_PR_test__c.field-meta.xml
<CustomField>
    <fullName>multiple_PR_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>multiple PR test</label>
    <type>Checkbox</type>
</CustomField>