unpackaged/main/default/objects/Account/fields/prod_test__c.field-meta.xml
<CustomField>
    <fullName>prod_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>prod-test</label>
    <type>Checkbox</type>
</CustomField>