unpackaged/main/default/objects/Account/fields/prod_test_dev__c.field-meta.xml
<CustomField>
    <fullName>prod_test_dev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>prod-test-dev</label>
    <type>Checkbox</type>
</CustomField>